--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Speed Reading Software</title>
     <script type="text/javascript" src="/dist/bundle.js" defer=true></script>
-	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link type="text/css" rel="stylesheet" href="/dist/app.css">
   </head>
   <body>
