--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Speed Reading Software</title>
+	  <link type="image/x-icon" rel="icon" href="favicon.ico">
     <script type="text/javascript" src="/dist/bundle.js" defer=true></script>
-	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+	  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link type="text/css" rel="stylesheet" href="/dist/app.css">
   </head>
   <body>
