Added basic authentication

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <title>Speed Reading Software</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 	  <link type="image/x-icon" rel="icon" href="favicon.ico">
-    <script type="text/javascript" src="/dist/bundle.js" defer=true></script>
+    <title>Speed Reading Software</title>
 	  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <link type="text/css" rel="stylesheet" href="/dist/app.css">
+    <script type="text/javascript" src="/dist/bundle.js" defer=true></script>
   </head>
   <body>
     <div id='root' />
