--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link type="image/x-icon" rel="icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000bad">
+    <link rel="manifest" href="manifest.json">
+	  <link rel="shortcut icon" href="favicon.ico">
     <title>Speed Reading Software</title>
-	  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
+	  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css">
     <link type="text/css" rel="stylesheet" href="/dist/app.css">
     <script type="text/javascript" src="/dist/bundle.js" defer=true></script>
   </head>
   <body>
-    <div id='root' />
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id='root'></div>
   </body>
 </html>
