--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000bad">
-    <link rel="manifest" href="manifest.json">
-	  <link rel="shortcut icon" href="favicon.ico">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
+	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Speed Reading Software</title>
-	  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css">
-    <link type="text/css" rel="stylesheet" href="/dist/app.css">
-    <script type="text/javascript" src="/dist/bundle.js" defer=true></script>
   </head>
   <body>
     <noscript>
