Added saved text modification

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#0072CE">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Speed Reading Software</title>
+    <title>Kiirlugemine 5.0</title>
   </head>
   <body>
     <noscript>
