--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#0072CE">
-    <meta name="description" content="Veebirakendus lugemiskiiruse arendamiseks">
+    <meta name="description" content="Tasuta veebirakendus lugemiskiiruse arendamiseks">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Kiirlugemine 5.1</title>
