Fixed smaller issues and added Google Analytics

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="et">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#0072CE">
     <meta name="description" content="Tasuta veebirakendus lugemiskiiruse arendamiseks">
+    <meta name="google-site-verification" content="hM3bKFaAwQlLHi6XkEWINPpjAFchwOh8VuTthNP-NhY" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Kiirlugemine 5.1</title>
