Regression chart fixes, added time period selection

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Kiirlugemine 5.1</title>
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   </head>
   <body>
     <noscript>
