--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="theme-color" content="#0072CE">
     <meta name="description" content="Tasuta veebirakendus lugemiskiiruse arendamiseks">
     <meta name="google-site-verification" content="hM3bKFaAwQlLHi6XkEWINPpjAFchwOh8VuTthNP-NhY" />
+    <meta name="msvalidate.01" content="F9CCCD38119FA8A1A0D301FBFC7FA9BF" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <title>Kiirlugemine 5.1</title>
