--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <meta name="msvalidate.01" content="F9CCCD38119FA8A1A0D301FBFC7FA9BF" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
 	  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <title>Kiirlugemine 5.1</title>
+    <title>Kiirlugemise tarkvara</title>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
   </head>
   <body>
